1.测试博客文章

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: 日常Blog
+subtitle: '好好学习 天天向上'
+description: '洪大宇的博客'
 keywords:
-author: John Doe
+author: DaYu
 language: en
 timezone: ''
 
